2003-10-29  Pavel Roskin  <proski@gnu.org>

	* extfs.c: Remove current_dir field, its role was purely
	decorative.  Rename names starting with underscore.

	* extfs.h: Merge ...
	* extfs.c: ... here.
	* Makefile.am: Remove extfs.h.

	* ftpfs.c: Use HAVE_STRUCT_LINGER_L_LINGER instead of
	HAVE_STRUCT_LINGER.

	* Makefile.am: Compile utilvfs.c even without USE_VFS_NET.
	* utilvfs.c (vfs_split_url): Only compile with USE_NETCODE
	defined.

2003-10-28  Pavel Roskin  <proski@gnu.org>

	* fish.c (fish_fh_open): Use vfs_mkstemps() for write buffers as
	well, since the file can be reopened for reading later.
	* ftpfs.c (ftpfs_fh_open): Likewise.

	* utilvfs.c (vfs_mkstemps): New function - create temporary file
	with the name resembling the original, but safe for scripts.
	* direntry.c (vfs_s_open): Use it.
	(vfs_s_retrieve_file): Likewise.
	* extfs.c (extfs_open): Likewise.
	* sfs.c (sfs_redirect): Likewise.

	* vfs.c (mc_ungetlocalcopy): Free local path here, not in class
	implementations.
	* vfs.h (struct vfs_s_class): Constify "local" argument for
	ungetlocalcopy.  Adjust all implementations.

	* direntry.c (vfs_s_init_class): Use our getlocalcopy for remote
	filesystems that cache files, not for archives.
	(vfs_s_getlocalcopy): Corresponding changes.

	* direntry.c (vfs_s_init_class): Improve interface to allow more
	code reuse.  Change all callers.
	(vfs_s_getlocalcopy): New implementation.  Don't use
	mc_def_getlocalcopy().  Use vfs_s_open() to create local copy.
	(vfs_s_ungetlocalcopy): New function.
	* xdirentry.h: Add new field "flags" to struct vfs_s_subclass.
	* extfs.c (extfs_ungetlocalcopy): Don't use
	mc_def_ungetlocalcopy() in the dead branch.
	* vfs.c (mc_def_getlocalcopy): Make static.
	(mc_def_ungetlocalcopy): Likewise.

2003-10-27  Pavel Roskin  <proski@gnu.org>

	* vfs.h: Constify some arguments for many functions.
	* xdirentry.h: Likewise.  Adjust all dependencies.

	* *.c: Rename functions that don't have an a prefix indicating