@@ -1,3 +1,9 @@
+2003-10-30  Pavel Roskin  <proski@gnu.org>
+
+	* vfs.c (vfs_rmstamp): Rescan the tree after the parents have
+	been removed.  Otherwise using old data causes data corruption
+	in some combinations (e.g. extfs inside tatfs).
+
 2003-10-29  Pavel Roskin  <proski@gnu.org>
 
 	* extfs.c: Remove current_dir field, its role was purely
